--- a/Ayudantia7/A7_prep_ejercicio2.html
+++ b/Ayudantia7/A7_prep_ejercicio2.html
@@ -1680,7 +1680,7 @@ Estudiante Magíster en Sociología PUC<br><a class="author_email" href="mailto:
 <address class="author_afil">
 Estudiante Magíster en Sociología PUC<br><a class="author_email" href="mailto:#"><a href="mailto:jdconejeros@uc.cl" class="email">jdconejeros@uc.cl</a></a>
 </address>
-<h4 class="date">13/10/2019</h4>
+<h4 class="date">14/10/2019</h4>
 
 </div>
 
@@ -1812,7 +1812,7 @@ País de la muestra
 <a class="sourceLine" id="cb2-3" data-line-number="3"><span class="co">#Instalamos liberías de trabajo:</span></a>
 <a class="sourceLine" id="cb2-4" data-line-number="4"><span class="co">#install.packages(&quot;dplyr&quot;)#Para manipulación de datos</span></a>
 <a class="sourceLine" id="cb2-5" data-line-number="5"><span class="co">#install.packages(&quot;car&quot;)#Funciones para estimar regresiones</span></a>
-<a class="sourceLine" id="cb2-6" data-line-number="6"><span class="co">#install.packages(&quot;readstata13&quot;) #lectura/importar de bases de datos en stata</span></a>
+<a class="sourceLine" id="cb2-6" data-line-number="6"><span class="co">#install.packages(&quot;haven&quot;) #lectura/importar de bases de datos en stata</span></a>
 <a class="sourceLine" id="cb2-7" data-line-number="7"><span class="co">#install.packages(&quot;stargazer&quot;) #Paquete que nos permite visualizar regresiones</span></a>
 <a class="sourceLine" id="cb2-8" data-line-number="8"><span class="co">#install.packages(&quot;skimr&quot;) #Paquete de exploración de datos</span></a>
 <a class="sourceLine" id="cb2-9" data-line-number="9"><span class="co">#install.packages(&quot;texreg&quot;) #visualizar regresiones</span></a>
